fix oc recipes display show eu discount for fluids